# llm-inference

./: .gitignore  README.md  alembic.ini  deploy_aws.sh  pyproject.toml  requirements-ai.txt  requirements-core.txt  requirements.txt  run_local.sh
.github/workflows/: deploy.yml
alembic/: README.md  env.py
alembic/versions/: 0001_create_document_metadata.py
deployment/: README.md  cloud-config.yml  secrets.template
docker/: .env.template  Dockerfile  README.md  docker-compose.yml  prometheus.yml
sample_data/: README.md  sample.json  sample.txt  sample2.json  sample2.txt  sample3.json  sample3.txt  sample4.txt  sample5.txt  sample6.txt  sample7.txt  sample8.txt
sample_data/.streamlit/: secrets.toml
src/: README.md  config.py
src/api/: middleware.py  routes.py
src/config/: aws_secrets_loader.py  settings.py
src/monitoring/: metrics.py
src/processing/: batch_ingest_sample_data.py  chunking.py  embeddings.py  ingest_rag.py  validation.py
src/storage/: __init__.py  models.py  vector_db.py
src/tests/: README.md
src/tests/integration/: test_documents_api.py  test_error_handling.py  test_ingest_query.py  test_metadata_filtering.py
src/tests/performance/: test_api_stress.py  test_ingest_performance.py
src/tests/unit/: test_chunking.py  test_chunking_edge_cases.py  test_embeddings.py  test_sqlalchemy_model.py  test_validation.py
ui/: Dockerfile  README.md  app.py  app.py.backup  requirements.txt  test_health_check.py
